--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
   <div class="home-container" id="home">
     <!-- Profile Image Container -->
     <div class="profile-img-container">
-      <img src="images/profile.jpg" alt="Profile Picture" class="profile-img">
+      <img src="images/profile.JPG" alt="Profile Picture" class="profile-img">
     </div>
     
     <!-- Main Title and Intro Text -->
@@ -347,9 +347,9 @@
     <div class="section-content">
       <h2>My Birthplace</h2>
       <div class="gallery">
-        <img src="images/place1.jpg" alt="Place 1">
-        <img src="images/place2.jpg" alt="Place 2">
-        <img src="images/place3.jpg" alt="Place 3">
+        <img src="images/place1.JPG" alt="Place 1">
+        <img src="images/place2.JPG" alt="Place 2">
+        <img src="images/place3.JPG" alt="Place 3">
       </div>
     </div>
   </section>
