--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     }
     
     #bg1 {
-      background-image: url('images/_.jpeg');
+      background-image: url('https://github.com/Kim-Kash03/Kim-Kash03.github.io/blob/153add78971cf967bcbe15d9e965b86ab385a50c/images/_.jpeg');
       opacity: 1;
       z-index: -3;
     }
@@ -307,7 +307,7 @@
   <div class="home-container" id="home">
     <!-- Profile Image Container -->
     <div class="profile-img-container">
-      <img src="images/profile.JPG" alt="Profile Picture" class="profile-img">
+      <img src="https://github.com/Kim-Kash03/Kim-Kash03.github.io/blob/153add78971cf967bcbe15d9e965b86ab385a50c/images/profile.JPG" alt="Profile Picture" class="profile-img">
     </div>
     
     <!-- Main Title and Intro Text -->
@@ -347,9 +347,9 @@
     <div class="section-content">
       <h2>My Birthplace</h2>
       <div class="gallery">
-        <img src="images/place1.JPG" alt="Place 1">
-        <img src="images/place2.JPG" alt="Place 2">
-        <img src="images/place3.JPG" alt="Place 3">
+        <img src="https://github.com/Kim-Kash03/Kim-Kash03.github.io/blob/153add78971cf967bcbe15d9e965b86ab385a50c/images/place1.JPG" alt="Place 1">
+        <img src="https://github.com/Kim-Kash03/Kim-Kash03.github.io/blob/153add78971cf967bcbe15d9e965b86ab385a50c/images/place2.JPG" alt="Place 2">
+        <img src="https://github.com/Kim-Kash03/Kim-Kash03.github.io/blob/153add78971cf967bcbe15d9e965b86ab385a50c/images/place3.JPG" alt="Place 3">
       </div>
     </div>
   </section>
